<resources>
    <string name="app_name">Street Art</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="hint_placemarkTitle">Street Art Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="enter_placemark_title"> Please enter a Street Art Title and Description </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="button_location">Set Location</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login"> Signup/Login to Placemark</string>
    <string name="title_activity_map">Map</string>
    <string name="hint_artistTitle">Artist Name</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="placemark_image_placeholder">Placemark Imagee</string>
    <string name="placemark_title_placeholder">Placemark Title</string>
    <string name="placemark_description_placeholder">Placemark Description</string>
    <string name="register_error">Please enter a username and password</string>
</resources>