<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelPlacemark"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:fontFamily="@font/alfa_slab_one"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_save"
        android:title="@string/menu_savePlacemark"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_deletePlacemark"
        android:icon="@android:drawable/ic_menu_delete"
        android:fontFamily="@font/alfa_slab_one"
        app:showAsAction="always"/>
</menu>