<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.streetart.views.streetart.StreetArtView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-6dp"
            android:layout_marginBottom="6dp">


            <Button
                android:id="@+id/chooseImage"
                android:layout_width="177dp"
                android:layout_height="84dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="19dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="236dp"
                android:layout_height="77dp"
                android:numStars="5"
                android:progressBackgroundTint="@color/black"
                android:progressTint="@android:color/holo_orange_dark"
                android:rating="4"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:stepSize="1"
                app:layout_constraintBottom_toTopOf="@+id/placemarkImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toEndOf="@+id/chooseImage"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="0.38" />

            <EditText
                android:id="@+id/description"
                android:layout_width="249dp"
                android:layout_height="62dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_placemarkDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/lat"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/streetArtTitle" />

            <EditText
                android:id="@+id/streetArtTitle"
                android:layout_width="248dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:autofillHints=""
                android:hint="@string/hint_placemarkTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/artistName" />

            <EditText
                android:id="@+id/artistName"
                android:layout_width="248dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:autofillHints=""
                android:hint="@string/hint_artistTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>


            <TextView
                android:id="@+id/lat"
                android:layout_width="95dp"
                android:layout_height="19dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:text="00.000000"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/lng"
                android:layout_width="92dp"
                android:layout_height="19dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="28dp"
                android:text="00.000000"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat" />

            <ImageView
                android:id="@+id/placemarkImage"
                android:layout_width="396dp"
                android:layout_height="110dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView2"
                android:layout_width="397dp"
                android:layout_height="221dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placemarkImage" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="90dp"
                android:layout_height="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="84dp"
                android:text="Location"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/streetArtTitle"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>